--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,7 +4,7 @@
 	/*flex-flow: column nowrap;*/
 	width: 100%;
 	min-height: 100vh;
-	background: #222 url('../../assets/timg.jpg') 0/cover fixed;
+	background: #222 url('../../assets/timg1.jpg') 0/cover fixed;
 	padding-top: 30vh;
 	/*align-items: center;
 	justify-content: center;*/
