--- a/src/components/MainLayout/MainLayout.css
+++ b/src/components/MainLayout/MainLayout.css
@@ -39,6 +39,6 @@
 	background: #fff;
 	padding: 24px;
 	margin: 0;
-	min-height: 380px;
+	/*min-height: 380px;*/
 	/*height: calc(100% - 42px);*/
 }
